--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,33 @@
     transform: rotate(360deg);
   }
 }
+
+.corpo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  background-color: orange;
+}
+
+.gaga{
+  background-color: #282c34;
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.gaga .botao{
+ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.botao{
+  width: 10vw;
+}
